--- a/template/views/signup.hbs
+++ b/template/views/signup.hbs
@@ -12,7 +12,7 @@
 <body>
   <div id="container">
     <div id="sign-in">
-      <h3>CREATE ACCOUNT</h3>
+      <h3>CREATE NEW ACCOUNT</h3>
       <form>
         <label for="username">Username
           <i class='fas fa-portrait'></i>
