--- a/template/views/signup.hbs
+++ b/template/views/signup.hbs
@@ -17,11 +17,11 @@
         <label for="username">Username
           <i class='fas fa-portrait'></i>
         </label>
-        <input type="text" id="email" name="email" placeholder="Type EmailId.">
+        <input type="text" id="email" name="email" placeholder="Type username.">
          <label for="email">Email
           <i class='fa fa-envelope'></i>
         </label>
-        <input type="text" id="username" name="username" placeholder="Type username.">
+        <input type="text" id="username" name="username" placeholder="Type email address.">
         <label for="pass">Password
           <i class='fas fa-user-lock'></i>
         </label>
