--- a/template/views/signup.hbs
+++ b/template/views/signup.hbs
@@ -10,25 +10,27 @@
 </head>
 
 <body>
-  <div id="container">
-    <div id="sign-in">
-      <h3>CREATE NEW ACCOUNT</h3>
-      <form>
+  <div class="modal">
+    <form class="modal-content">
+        
+    <div class="sign-in">
+      <h3>SIGN UP</h3>
         <label for="username">Username
-          <i class='fas fa-portrait'></i>
         </label>
-        <input type="text" id="email" name="email" placeholder="Type username.">
-         <label for="email">Email
-          <i class='fa fa-envelope'></i>
+         <i class='fa fa-user'></i>
+        <input type="text" id="username" name="username" placeholder="Type username.">
+        <label for="email">Email ID
         </label>
-        <input type="text" id="username" name="username" placeholder="Type email address.">
+         <i class='fa fa-envelope'></i>
+        <input type="text" id="email" name="email" placeholder="Type Email Id.">
         <label for="pass">Password
-          <i class='fas fa-user-lock'></i>
         </label>
+         <i class='fas fa-user-lock'></i>
         <input type="text" id="pass" name="pass" placeholder="Type your password..">
-        <input type="submit" value="SIGNUP">
-      </form>
+        <input type="submit" value="SIGN UP" class="buttext">
+     
     </div>
+  </form>
   </div>
 </body>
 
